recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:3: error: not found: value levels
		sierpinski(levels-1, length/2);
                           ^Sierpinski:5: error: not found: value levels
		sierpinski(levels-1, length/2);
                           ^Sierpinski:7: error: not found: value levels
		sierpinski(levels-1, length/2);
                           ^